tests/snapshots/config_fixtures__dlp_invalid_action.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 6, column 46
  |
6 |     { name = "test", regex = '\d+', action = "delete" },
  |                                              ^^^^^^^^
unknown variant `delete`, expected `block` or `redact`
