tests/snapshots/config_fixtures__dlp_invalid_regex.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
Invalid DLP regex for 'bad': regex parse error:
    [invalid
    ^
error: unclosed character class
