tests/snapshots/config_fixtures__empty.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 1, column 1
  |
1 | 
  | ^
missing field `server`
